Fix Windows-only build failures in the BOM tests.
Read captured process output in the process native encoding instead of
strict UTF-8, so a non-zero exit no longer masks the real test failure
with a MalformedInputException on Windows, where a forked JVM writes its
stdout in the native codepage.

Strip the classifier from coordinates in the Dependencies resolution
test double so BOM fetch tests no longer create colon-bearing filenames,
which are illegal on Windows. Real repositories already split the
classifier off before building a path.